[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/2D/crate_pressed.png" type="Texture2D" id=1]
[ext_resource path="res://Art/Fonts/Kenney Future Narrow.ttf" type="FontFile" id=2]
[ext_resource path="res://Art/2D/cross.png" type="Texture2D" id=3]
[ext_resource path="res://Art/Fonts/KenneyFutureNarrow.tres" type="FontFile" id=4]
[ext_resource path="res://UI/ScoreUI.gd" type="Script" id=5]

[sub_resource type="FontFile" id=1]
size = 56
font_data = ExtResource( 2 )

[node name="ScoreUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -441.0
offset_top = -234.0
offset_right = 441.0
offset_bottom = 234.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_top = 29.0
offset_right = 882.0
offset_bottom = 438.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
offset_right = 882.0
offset_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
offset_right = 318.0
offset_bottom = 342.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
offset_left = 322.0
offset_right = 422.0
offset_bottom = 342.0

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer"]
offset_top = 121.0
offset_right = 100.0
offset_bottom = 221.0
texture = ExtResource( 3 )

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
offset_left = 426.0
offset_right = 882.0
offset_bottom = 342.0

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
offset_top = 110.0
offset_right = 456.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource( 4 )
text = "999999"

[node name="HighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
offset_top = 346.0
offset_right = 882.0
offset_bottom = 409.0
theme_override_fonts/font = SubResource( 1 )
text = "high score: 0"
